Correctly position InfoBox component if window get’s too small

--- a/components/InfoBox/index.scss
+++ b/components/InfoBox/index.scss
@@ -13,7 +13,6 @@
   line-height: $line-height-small;
   background: $gray-base-90;
   border-radius: $border-radius-small;
-  transition: transform .1s ease-in-out;
 }
 
 .bottomLeft {
